kustomize/overlays/demo/golang-tekton-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-hello-world-demo
  labels:
    app: golang-hello-world
spec:
  selector:
    matchLabels:
      app: golang-hello-world
  template:
    metadata:
      labels:
        app: golang-hello-world
    spec:
      containers:
      - name: golang-hello-world
        image: kronos23/golang-hello-world:develop.1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
